# diesel-orm

./: Cargo.toml  database.db  diesel.toml
migrations/2025-07-11-004122_create_posts/: up.sql
migrations/2025-07-14-063156_create_books/: up.sql
migrations/2025-07-14-063205_create_pages/: up.sql
migrations/2025-07-14-074552_create_authors/: up.sql
migrations/2025-07-14-074559_create_books_authors/: up.sql
migrations/2025-07-15-083744_create_rooms/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
src/models/: huya.rs
